// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Let's Set Up Your Rental Profile
  </ForwardRef(render)>
  <ForwardRef(render)>
    Complete the sections that apply to you and skip the ones that don't.
  </ForwardRef(render)>
  <div>
    <Capsule
      buttonLabel="Add Another Person"
      expansionPanel={
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Roommates"
          labelQuantity={4}
        >
          <UNDEFINED
            item={
              Object {
                "first_name": "kreebs",
                "id": 71,
                "is_registered": false,
                "last_milestone": null,
                "last_name": "mcgreebs",
                "phone_number": "(383) 838-4849",
                "status": "Not Started",
              }
            }
            type="co_applicants"
          />
          <UNDEFINED
            item={
              Object {
                "first_name": "jerry",
                "id": 73,
                "is_registered": true,
                "last_milestone": Object {
                  "created_at": "2020-07-23 15:22:49",
                  "event": 10030,
                  "id": 10557,
                },
                "last_name": "maguire",
                "phone_number": "(333) 888-4449",
                "status": "Completed",
              }
            }
            type="co_applicants"
          />
          <UNDEFINED
            item={
              Object {
                "first_name": "Made",
                "id": 99,
                "is_registered": true,
                "last_milestone": Object {
                  "created_at": "2020-07-23 15:22:49",
                  "event": 10030,
                  "id": 10557,
                },
                "last_name": "Man",
                "phone_number": "(212) 123-4567",
                "status": "Completed",
              }
            }
            type="occupant"
          />
          <UNDEFINED
            item={
              Object {
                "first_name": "Bobby",
                "id": 75,
                "last_name": "Kennedy",
                "phone_number": "(555) 822-4841",
              }
            }
            type="dependent"
          />
        </ExistingItemsExpansionPanel>
      }
      label="I'll be living with other people"
      limitReached={false}
      name="co_applicants"
      prefix={
        <img
          alt="coapplicants"
          src="coapplicants.png"
        />
      }
      route="/application/17/rental-profile/invite-roommates"
    />
    <Capsule
      buttonLabel="Invite a guarantor"
      expansionPanel={
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Guarantor"
          labelQuantity={1}
        >
          <UNDEFINED
            item={
              Object {
                "first_name": "elvish",
                "id": 74,
                "is_registered": false,
                "last_milestone": Object {
                  "created_at": "2020-07-23 15:22:49",
                  "event": 10070,
                  "id": 10554,
                },
                "last_name": "parsley",
                "phone_number": "(222) 111-0000",
              }
            }
            type="guarantor"
          />
        </ExistingItemsExpansionPanel>
      }
      label="I'll need a guarantor"
      limitReached={true}
      name="guarantor"
      prefix={
        <img
          alt="coins"
          src="guarantor.png"
        />
      }
      route="/application/17/rental-profile/invite-guarantor"
      tip="This is a person that agrees to be legally responsible for the apartment, its condition, and the money owed for rent if you are unable to pay."
    />
    <Capsule
      buttonLabel="Add a pet"
      expansionPanel={false}
      label="I'll be living with pets"
      limitReached={false}
      name="pets"
      prefix={
        <img
          alt="dog"
          src="cat.svg"
        />
      }
      route="/application/17/rental-profile/pets"
    />
    <Capsule
      buttonLabel="Add Parking"
      expansionPanel={false}
      label="I'll need parking"
      limitReached={false}
      name="parking"
      prefix={
        <img
          alt="car parking"
          src="addparking.svg"
        />
      }
      route="/application/17/rental-profile/parking"
    />
    <Capsule
      buttonLabel="Add Storage"
      expansionPanel={false}
      label="I'll need storage"
      limitReached={false}
      name="storage"
      prefix={
        <img
          alt="storage"
          src="addstorage.svg"
        />
      }
      route="/application/17/rental-profile/storage"
    />
    <Capsule
      buttonLabel="Add Wine Cooler"
      expansionPanel={false}
      label="I'll need a cooler to store wine"
      limitReached={false}
      name="wine-cooler"
      prefix={
        <img
          alt="wine_cooler"
          src="wine.png"
        />
      }
      route="/application/17/rental-profile/wine-cooler"
    />
  </div>
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={27}
    marginTop={60}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <BackLink
    to="/"
  />
</React.Fragment>
`;

exports[`renders ExistingItemsExpansionPanel for parking when there are selected_rental_options with quantity greater than 0 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Let's Set Up Your Rental Profile
  </ForwardRef(render)>
  <ForwardRef(render)>
    Complete the sections that apply to you and skip the ones that don't.
  </ForwardRef(render)>
  <div>
    <Capsule
      buttonLabel="Add Another Person"
      expansionPanel={
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Roommates"
          labelQuantity={4}
        >
          <UNDEFINED
            item={
              Object {
                "first_name": "kreebs",
                "id": 71,
                "is_registered": false,
                "last_milestone": null,
                "last_name": "mcgreebs",
                "phone_number": "(383) 838-4849",
                "status": "Not Started",
              }
            }
            type="co_applicants"
          />
          <UNDEFINED
            item={
              Object {
                "first_name": "jerry",
                "id": 73,
                "is_registered": true,
                "last_milestone": Object {
                  "created_at": "2020-07-23 15:22:49",
                  "event": 10030,
                  "id": 10557,
                },
                "last_name": "maguire",
                "phone_number": "(333) 888-4449",
                "status": "Completed",
              }
            }
            type="co_applicants"
          />
          <UNDEFINED
            item={
              Object {
                "first_name": "Made",
                "id": 99,
                "is_registered": true,
                "last_milestone": Object {
                  "created_at": "2020-07-23 15:22:49",
                  "event": 10030,
                  "id": 10557,
                },
                "last_name": "Man",
                "phone_number": "(212) 123-4567",
                "status": "Completed",
              }
            }
            type="occupant"
          />
          <UNDEFINED
            item={
              Object {
                "first_name": "Bobby",
                "id": 75,
                "last_name": "Kennedy",
                "phone_number": "(555) 822-4841",
              }
            }
            type="dependent"
          />
        </ExistingItemsExpansionPanel>
      }
      label="I'll be living with other people"
      limitReached={false}
      name="co_applicants"
      prefix={
        <img
          alt="coapplicants"
          src="coapplicants.png"
        />
      }
      route="/application/17/rental-profile/invite-roommates"
    />
    <Capsule
      buttonLabel="Invite a guarantor"
      expansionPanel={
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Guarantor"
          labelQuantity={1}
        >
          <UNDEFINED
            item={
              Object {
                "first_name": "elvish",
                "id": 74,
                "is_registered": false,
                "last_milestone": Object {
                  "created_at": "2020-07-23 15:22:49",
                  "event": 10070,
                  "id": 10554,
                },
                "last_name": "parsley",
                "phone_number": "(222) 111-0000",
              }
            }
            type="guarantor"
          />
        </ExistingItemsExpansionPanel>
      }
      label="I'll need a guarantor"
      limitReached={true}
      name="guarantor"
      prefix={
        <img
          alt="coins"
          src="guarantor.png"
        />
      }
      route="/application/17/rental-profile/invite-guarantor"
      tip="This is a person that agrees to be legally responsible for the apartment, its condition, and the money owed for rent if you are unable to pay."
    />
    <Capsule
      buttonLabel="Add a pet"
      expansionPanel={false}
      label="I'll be living with pets"
      limitReached={false}
      name="pets"
      prefix={
        <img
          alt="dog"
          src="cat.svg"
        />
      }
      route="/application/17/rental-profile/pets"
    />
    <Capsule
      buttonLabel="Manage Parking"
      expansionPanel={
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Parking Space"
          labelQuantity={2}
        >
          <ExistingGenericRentalOption
            quantity={2}
            rentalOption={
              Object {
                "id": 102,
                "name": "Garage",
              }
            }
          />
        </ExistingItemsExpansionPanel>
      }
      label="I'll need parking"
      limitReached={false}
      name="parking"
      prefix={
        <img
          alt="car parking"
          src="addparking.svg"
        />
      }
      route="/application/17/rental-profile/parking"
    />
    <Capsule
      buttonLabel="Add Storage"
      expansionPanel={false}
      label="I'll need storage"
      limitReached={false}
      name="storage"
      prefix={
        <img
          alt="storage"
          src="addstorage.svg"
        />
      }
      route="/application/17/rental-profile/storage"
    />
    <Capsule
      buttonLabel="Add Wine Cooler"
      expansionPanel={false}
      label="I'll need a cooler to store wine"
      limitReached={false}
      name="wine-cooler"
      prefix={
        <img
          alt="wine_cooler"
          src="wine.png"
        />
      }
      route="/application/17/rental-profile/wine-cooler"
    />
  </div>
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={27}
    marginTop={60}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <BackLink
    to="/"
  />
</React.Fragment>
`;

exports[`renders ExistingItemsExpansionPanel for parking when there are selected_rental_options with quantity greater than 0 2`] = `
<ExistingGenericRentalOption
  quantity={2}
  rentalOption={
    Object {
      "id": 102,
      "name": "Garage",
    }
  }
/>
`;

exports[`renders ExistingItemsExpansionPanel with coapplicants as existing items 1`] = `
Array [
  Array [
    <UNDEFINED
      item={
        Object {
          "first_name": "kreebs",
          "id": 71,
          "is_registered": false,
          "last_milestone": null,
          "last_name": "mcgreebs",
          "phone_number": "(383) 838-4849",
          "status": "Not Started",
        }
      }
      type="co_applicants"
    />,
    <UNDEFINED
      item={
        Object {
          "first_name": "jerry",
          "id": 73,
          "is_registered": true,
          "last_milestone": Object {
            "created_at": "2020-07-23 15:22:49",
            "event": 10030,
            "id": 10557,
          },
          "last_name": "maguire",
          "phone_number": "(333) 888-4449",
          "status": "Completed",
        }
      }
      type="co_applicants"
    />,
  ],
  Array [
    <UNDEFINED
      item={
        Object {
          "first_name": "Made",
          "id": 99,
          "is_registered": true,
          "last_milestone": Object {
            "created_at": "2020-07-23 15:22:49",
            "event": 10030,
            "id": 10557,
          },
          "last_name": "Man",
          "phone_number": "(212) 123-4567",
          "status": "Completed",
        }
      }
      type="occupant"
    />,
  ],
  Array [
    <UNDEFINED
      item={
        Object {
          "first_name": "Bobby",
          "id": 75,
          "last_name": "Kennedy",
          "phone_number": "(555) 822-4841",
        }
      }
      type="dependent"
    />,
  ],
]
`;
